--- a/Compilers/DelphiXE10.3/tiOPFOptions.dproj
+++ b/Compilers/DelphiXE10.3/tiOPFOptions.dproj
@@ -106,6 +106,7 @@
         <VerInfo_Keys>CompanyName=;FileVersion=3.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductVersion=3.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName);FileDescription=$(MSBuildProjectName);ProductName=$(MSBuildProjectName)</VerInfo_Keys>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <DllSuffix>XE103</DllSuffix>
+        <DCC_Define>DEBUG;LINK_ZEOS_FB;$(DCC_Define)</DCC_Define>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
@@ -114,6 +115,7 @@
         <DCCReference Include="vcl.dcp"/>
         <DCCReference Include="rtl.dcp"/>
         <DCCReference Include="dbrtl.dcp"/>
+        <DCCReference Include="ZCore.dcp"/>
         <DCCReference Include="..\..\Options\ADOX_TLB.pas"/>
         <DCCReference Include="..\..\Options\tiCompressNone.pas"/>
         <DCCReference Include="..\..\Options\tiCompressZLib.pas"/>
@@ -197,10 +199,6 @@
                     <Source Name="MainSource">tiOPFOptions.dpk</Source>
                 </Source>
                 <Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\TeeUI9260.bpl">TeeChart User Interface Components</Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\TeeDB9260.bpl">TeeChart Database Components</Excluded_Packages>
-                    <Excluded_Packages Name="$(BDSBIN)\Tee9260.bpl">TeeChart Components</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Users\Public\Documents\Embarcadero\Studio\20.0\Bpl\RvDesign110.bpl">Fichier C:\Users\Public\Documents\Embarcadero\Studio\20.0\Bpl\RvDesign110.bpl non trouvé</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k260.bpl">Composants Microsoft Office 2000 Sample Automation Server Wrapper</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp260.bpl">Composants Microsoft Office XP Sample Automation Server Wrapper</Excluded_Packages>
                 </Excluded_Packages>
